Week 4 exercises completed

--- a/Twitter scrapper.ipynb
+++ b/Twitter scrapper.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 2,
    "id": "724291d6",
    "metadata": {},
    "outputs": [],
@@ -363,6 +363,45 @@
    "outputs": [],
    "source": [
     "week3_arch_cnn_df = tweets_df.to_csv('./data/week3_arch_cnn_df.csv')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "173e40e5",
+   "metadata": {},
+   "source": [
+    "## For Week 4-5: From 10 media with 5 of them being left-leaned and 5 being right-leaned"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "a83fa406",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "media_list = ['CNN','thedailybeast','jacobin','democracynow','HuffPost','FoxNews','BreitbartNews','NRO','amspectator','NYPostOpinion']\n",
+    "tweets_list = []\n",
+    "\n",
+    "# Using TwitterSearchScraper to scrape data and append tweets to list\n",
+    "for media in media_list:\n",
+    "    for i,tweet in enumerate(sntwitter.TwitterSearchScraper('from:{}'.format(media)).get_items()): #declare a username \n",
+    "        if i>1000: #number of tweets you want to scrape\n",
+    "            break\n",
+    "        tweets_list.append([tweet.date, tweet.id, tweet.content, tweet.user.username]) #declare the attributes to be returned\n",
+    "    \n",
+    "# Creating a dataframe from the tweets list above \n",
+    "tweets_df = pd.DataFrame(tweets_list, columns=['Datetime', 'ID','Text', 'Media'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "dc7bc369",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "week45_10media_df = tweets_df.to_csv('./data/week45_10media_df.csv')"
    ]
   }
  ],
