--- a/Twitter scrapper.ipynb
+++ b/Twitter scrapper.ipynb
@@ -396,12 +396,50 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 1,
    "id": "dc7bc369",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'tweets_df' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32mc:\\Users\\86188\\Desktop\\SOCI 40133\\soci40133\\Twitter scrapper.ipynb Cell 20'\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> <a href='vscode-notebook-cell:/c%3A/Users/86188/Desktop/SOCI%2040133/soci40133/Twitter%20scrapper.ipynb#ch0000019?line=0'>1</a>\u001b[0m week45_10media_df \u001b[39m=\u001b[39m tweets_df\u001b[39m.\u001b[39mto_csv(\u001b[39m'\u001b[39m\u001b[39m./data/week45_10media_df.csv\u001b[39m\u001b[39m'\u001b[39m)\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'tweets_df' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "week45_10media_df = tweets_df.to_csv('./data/week45_10media_df.csv')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "35ffed7f",
+   "metadata": {},
+   "source": [
+    "### And another 1,000 tweets from the neutral media: Real Clear Politics"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e94c303f",
    "metadata": {},
    "outputs": [],
    "source": [
-    "week45_10media_df = tweets_df.to_csv('./data/week45_10media_df.csv')"
+    "tweets_realclearnews = []\n",
+    "for i,tweet in enumerate(sntwitter.TwitterSearchScraper('from:RealClearNews').get_items()): #declare a username \n",
+    "    if i>1000: #number of tweets you want to scrape\n",
+    "        break\n",
+    "    tweets_realclearnews.append([tweet.date, tweet.id, tweet.content, tweet.user.username]) \n",
+    "\n",
+    "realclearnews_df = pd.DataFrame(tweets_realclearnews, columns=['Datetime', 'ID','Text', 'Media'])\n",
+    "\n",
+    "realclearnews_df.to_csv('./data/week5_realclearnews_df.csv')"
    ]
   }
  ],
